--- a/index.css
+++ b/index.css
@@ -3,17 +3,31 @@ body {
   margin: 0;
   height: 100%;
   width: 100%;
+  font-family: Arial, sans-serif;
 }
 .main {
   height: 100%;
   width: 100%;
   position: relative;
 }
-nav {
+.nav {
   height: 100px;
-  width: 100%;
-  background: hsl(240, 75%, 68%);
+  max-width: 100%;
+  /* background: hsl(240, 75%, 68%); */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 3vw;
 }
-nav h1 {
-  margin: 0;
+.nav h1 {
+  font-size: 2vw;
+}
+
+.nav-part2 {
+  display: flex;
+  gap: 3vw;
+  /* background-color: red; */
+}
+.nav h4 {
+  font-size: 1vw;
 }
