--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 3vw;
+  padding: 0 4vw;
 }
 .nav h1 {
   font-size: 2vw;
@@ -25,9 +25,72 @@ body {
 
 .nav-part2 {
   display: flex;
+  align-items: center;
   gap: 3vw;
   /* background-color: red; */
 }
 .nav h4 {
   font-size: 1vw;
+}
+.nav i {
+  font-size: 1.2vw;
+  font-weight: 800;
+  display: none;
+}
+
+.content {
+  height: calc(100% - 100px);
+  max-width: 100%;
+  display: flex;
+  position: relative;
+}
+
+.left {
+  height: 100%;
+  width: 55%;
+  padding: 7vw 4vw;
+}
+.left h1 {
+  font-size: 4vw;
+  line-height: 4.4vw;
+}
+.left span {
+  color: lightseagreen;
+}
+.left p {
+  font-size: 1.2vw;
+  width: 80%;
+}
+button {
+  font-size: 1.5vw;
+  padding: 1vw 2vw;
+  background-color: lightseagreen;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-weight: 700;
+  cursor: pointer;
+}
+.right {
+  height: 100%;
+  width: 45%;
+}
+/* mobile screens */
+@media (max-width: 600px) {
+  .nav {
+    background-color: lightseagreen;
+    padding: 0 4vw;
+    color: #fff;
+  }
+
+  .nav h1 {
+    font-size: 6vw;
+  }
+  .nav h4 {
+    display: none;
+  }
+  .nav i {
+    display: block;
+    font-size: 6vw;
+  }
 }
