--- a/index.css
+++ b/index.css
@@ -37,7 +37,10 @@ body {
   font-weight: 800;
   display: none;
 }
-
+.nav button {
+  font-size: 1vw;
+  padding: 0.7vw 1.5vw;
+}
 .content {
   height: calc(100% - 100px);
   max-width: 100%;
@@ -47,7 +50,7 @@ body {
 
 .left {
   height: 100%;
-  width: 55%;
+  width: 50%;
   padding: 7vw 4vw;
 }
 .left h1 {
@@ -55,7 +58,7 @@ body {
   line-height: 4.4vw;
 }
 .left span {
-  color: lightseagreen;
+  color: #ff735c;
 }
 .left p {
   font-size: 1.2vw;
@@ -64,7 +67,7 @@ body {
 button {
   font-size: 1.5vw;
   padding: 1vw 2vw;
-  background-color: lightseagreen;
+  background-color: #ff735c;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -73,14 +76,18 @@ button {
 }
 .right {
   height: 100%;
-  width: 45%;
+  width: 50%;
+}
+
+.right img {
+  height: 100%;
+  width: 100%;
 }
 /* mobile screens */
 @media (max-width: 600px) {
   .nav {
-    background-color: lightseagreen;
     padding: 0 4vw;
-    color: #fff;
+    min-height: 60px;
   }
 
   .nav h1 {
@@ -92,5 +99,33 @@ button {
   .nav i {
     display: block;
     font-size: 6vw;
+  }
+  .nav button {
+    display: none;
+  }
+  .content {
+    height: calc(100% - 60px);
+    flex-direction: column-reverse;
+    position: relative;
+  }
+  .left {
+    width: calc(100% - 8vw);
+    height: 50%;
+  }
+  .left h1 {
+    font-size: 7vw;
+    line-height: 10vw;
+  }
+  .left p {
+    font-size: 4vw;
+    width: 100%;
+  }
+  .left button {
+    font-size: 5vw;
+    padding: 2vw 3vw;
+  }
+  .right {
+    width: 100%;
+    height: 50%;
   }
 }
